<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gurmandeep.demo.demo2.Settings">

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:background="@color/colorAccent"
        android:textColor="@color/text_color"
        android:textSize="@dimen/headertext_size"
        android:padding="@dimen/header_padding"/>

    <TextView
        android:id="@+id/textview_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_1"
        android:layout_marginTop="@dimen/textview_margin_top"
        android:text="@string/settings_text"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/prefrences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/textview_2"
        android:layout_marginTop="@dimen/registrationmargin_top">

        <CheckBox
            android:id="@+id/prefrences_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_prefrence_1"/>

        <CheckBox
            android:id="@+id/prefrences_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_prefrence_2"/>

        <CheckBox
            android:id="@+id/prefrences_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_prefrence_3"/>

        <CheckBox
            android:id="@+id/prefrences_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_prefrence_4"/>

        <CheckBox
            android:id="@+id/prefrences_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_prefrence_5"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changed_settings"
        android:id="@+id/button"
        android:layout_below="@+id/prefrences"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

</RelativeLayout>
