<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gurmandeep.demo.demo2.UserActivity">

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:background="@color/colorAccent"
        android:textColor="@color/text_color"
        android:textSize="@dimen/headertext_size"
        android:padding="@dimen/header_padding"/>

    <TextView
        android:id="@+id/textview_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:layout_below="@+id/textview_1"
        android:layout_marginTop="@dimen/textview_margin_top"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textview_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prefrence_text"
        android:layout_below="@+id/textview_2"
        android:layout_marginTop="@dimen/textview_margin_top"
        android:textColor="@color/black"/>

    <ImageButton
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:src="@drawable/setting"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textview_3"
        android:layout_toEndOf="@+id/textview_3" />
</RelativeLayout>
